# blas

./: .travis.yml  Cargo.toml  LICENSE.md  LICENSE.txt  Makefile.cargo  README.md  c.py  fortran.py  generate.py
benches/: c.rs  fortran.rs  lib.rs  metal.rs
etc/: gen.py
src/: c.rs  fortran.rs  lib.rs  metal.rs
tests/: lib.rs  metal.rs
