[package]
name = "blas"
version = "0.18.1"
license = "Apache-2.0/MIT"
authors = [
    "Andrew Straw <strawman@astraw.com>",
    "Corey Richardson <corey@octayn.net>",
    "Ivan Ukhov <ivan.ukhov@gmail.com>",
    "Mason Smith <masonium@gmail.com>",
]
description = "The package provides an interface to the Basic Linear Algebra Subprograms."
documentation = "https://docs.rs/blas"
homepage = "https://github.com/stainless-steel/blas"
repository = "https://github.com/stainless-steel/blas"
readme = "README.md"
categories = ["api-bindings", "science"]
keywords = ["linear-algebra"]
exclude = ["bin/*"]

[features]
default = ["openblas"]

accelerate = ["blas-sys/accelerate"]
netlib = ["blas-sys/netlib"]
openblas = ["blas-sys/openblas"]

[dependencies]
libc = "0.2"

[dependencies.num-complex]
version = "0.1"
default-features = false

[dependencies.blas-sys]
version = "0.6"
default-features = false

[[bench]]
name = "lib"
path = "benches/lib.rs"
