[package]
name = "blas"
version = "0.22.1"
license = "Apache-2.0/MIT"
authors = [
    "Andrew Straw <strawman@astraw.com>",
    "Corey Richardson <corey@octayn.net>",
    "Ivan Ukhov <ivan.ukhov@gmail.com>",
    "Mason Smith <masonium@gmail.com>",
    "Toshiki Teramura <toshiki.teramura@gmail.com>",
]
description = "The package provides wrappers for BLAS (Fortran)."
documentation = "https://docs.rs/blas"
homepage = "https://github.com/blas-lapack-rs/blas"
repository = "https://github.com/blas-lapack-rs/blas"
readme = "README.md"
categories = ["api-bindings", "science"]
keywords = ["linear-algebra"]

[dependencies]
libc = "0.2"
half = {version="2.3.1", optional=true}

[dependencies.num-complex]
version = "0.4"
default-features = false

[dependencies.blas-sys]
version = "0.7.2"
default-features = false

[features]
half = ["blas-sys/half", "dep:half"]
